# topsbm

./: .travis.yml  LICENSE  README.md  README.rst  appveyor.yml  doc-environment.yml  environment.yml  readthedocs.yml  setup.cfg  setup.py
ci_scripts/travis/: install.sh  success.sh  test.sh
doc/: api.rst  conf.py  index.rst  install.rst  maintainers.rst
doc/examples/: example.ipynb
examples/: fit_HSBM.py  fit_topsbm.py  plot_classifier.py  plot_fit_topsbm.py  plot_template.py  plot_transformer.py
hSBM/: __init__.py  hSBM.py  transformer.py
hSBM/tests/: test_common.py  test_template.py
skltemplate/: template.py
topsbm/: __init__.py  transformer.py
topsbm/tests/: test_common.py
