[metadata]
description-file = README.md

[aliases]
# python2.7 has upgraded unittest and it is no longer compatible with some
# of our tests, so we run all through nose
test = nosetests

[pytest]
addopts =
    --ignore ci_scripts
    --doctest-modules
    --disable-pytest-warnings
    -W ignore:getargspec:DeprecationWarning
