[metadata]
description-file = README.md
url = https://topsbm.readthedocs.io
license = GPLv3

[aliases]
# python2.7 has upgraded unittest and it is no longer compatible with some
# of our tests, so we run all through nose
test = nosetests

[tool:pytest]
addopts =
    --ignore ci_scripts
    --doctest-modules
    --disable-pytest-warnings
    --cov=topsbm
    -W ignore:.*getargspec.*:DeprecationWarning

[flake8]
ignore=E741
