[metadata]
description = A scikit-learn extension for Topic Modelling with Hierarchical Stochastic Block Models
long_description = file: README.rst
url = https://topsbm.readthedocs.io
license = GPLv3

[aliases]
test = pytest

[tool:pytest]
addopts =
    --ignore ci_scripts
    --doctest-modules
    --disable-pytest-warnings
    --cov=topsbm
    -W ignore:.*getargspec.*:DeprecationWarning

[flake8]
ignore=E741
